<resources>
    <string name="sign_in" translatable="false">Sign In</string>

    <string name="app_name">HPPK Angel\'s Wing</string>
    <string name="name">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="register">Register</string>
    <string name="lab_part">Lab/Part</string>

    <string name="lab_1">Lab 1</string>
    <string name="lab_2">Lab 2</string>
    <string name="lab_solution">Lab Solution</string>
    <string name="group">Group</string>
    <string name="all">All</string>

    <string name="part_hawoohwa">Part-Woohwa Ha</string>
    <string name="part_leegeunchul">Part-Geunchul Lee</string>
    <string name="part_leejoongmok">Part-Joongmok Lee</string>
    <string name="part_leekeechang">Part-Keechang Lee</string>
    <string name="part_mohamad">Part-Mohamad</string>
    <string name="part_jungjintae">Part-Jintae Jung</string>

    <string name="part_chotaegyun">Part-Taegyun Cho</string>
    <string name="part_heonam">Part-Nam Heo</string>
    <string name="part_kimbyoungyue">Part-Byoungyue Kim</string>
    <string name="part_chaesukyoung">Part-Sukyoung Chae</string>
    <string name="part_kimhaengnan">Part-Haengnan Kim</string>

    <string name="part_kanghyungjong">Part-Hyungjong Kang</string>
    <string name="part_kwonyongchan">Part-Yongchan Kwon (Cloud)</string>
    <string name="part_kimsudong">Part-Sudong Kim</string>
    <string name="part_choijunyoung">Part-Junyoung Choi</string>

    <string name="part_siminbo">Part-Inbo Shim</string>
    <string name="part_dotaehoi">Part-Taehoi Do</string>
    <string name="part_system_architect">Part-System Architect</string>

    <string name="invalid_name">invalid name</string>
    <string name="invalid_email">invalid email</string>
    <string name="invalid_product_name">invalid product name</string>
    <string name="invalid_price">invalid price</string>
    <string name="empty_products">There are no products.</string>
    <string name="money_unit">won</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="other_seller">Other Seller</string>
    <string name="seller">Seller</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_get_image_method">Please select how you want to import the item images.</string>
    <string name="failed_register_product">Failed to register the product</string>
    <string name="invalid_money_more_than_5000">Minimum price must be at least 5,000.</string>
    <string name="product_list">Product List</string>
    <string name="product_details">Product Details</string>
    <string name="edit">Edit</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_details">By signing in, you agree to the Privacy Policy.</string>
    <string name="delete">Delete</string>
    <string name="err_delete_failed">Delete Failed</string>
    <string name="msg_delete_success">Delete Success</string>
    <string name="product_delete">Product Delete</string>
    <string name="msg_product_delete">Do you want to delete the product?</string>
    <string name="sold_out">Sold Out</string>
    <string name="msg_sold_out">Was the product sold? Once changed, it can not be changed.</string>
    <string name="failed">Failed</string>
    <string name="add_product">Add New Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="err_product_not_exist">Product is not exist</string>
    <string name="statistics">Statistics</string>
    <string name="top3_most_sales">Top 3 Part - Sales King</string>
    <string name="top3_most_donate">Top 3 Part - Donation King</string>
    <string name="msg_will_be_open_event_day">This will be opened on event day.</string>
    <string name="statistics_top3">Statistics - Top 3</string>
    <string name="number_of_users">Favorites %1$d</string>
    <string name="number_of_employees_interested_in_this_product">%1$d employees are interested in this product.</string>
    <string name="my_favorites">My Favorites</string>
    <string name="search">Search</string>
    <string name="hint_search">Input Keyword</string>
    <string name="err_search_keyword_is_empty">Please enter search keyword.</string>
    <string name="sales_booth">Sales Booth</string>
</resources>
