<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addedit.AddEditActivity">

    <ImageView
            android:id="@+id/ivProduct"
            android:background="@drawable/photo_border"
            android:src="@drawable/ic_add_circle"
            android:scaleType="center"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_margin="40dp"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tvProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/product_name"
            app:layout_constraintTop_toBottomOf="@id/ivProduct"
            app:layout_constraintStart_toStartOf="parent" />

    <EditText
            android:id="@+id/etProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:inputType="textPersonName"
            android:textAlignment="textEnd"
            tools:text="Product Name"
            app:layout_constraintTop_toBottomOf="@id/tvProductName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/tvErrProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalid_product_name"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/etProductName"
            app:layout_constraintStart_toStartOf="@id/etProductName" />

    <TextView
            android:id="@+id/tvLblPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/price"
            app:layout_constraintTop_toBottomOf="@id/etProductName"
            app:layout_constraintStart_toStartOf="parent" />

    <EditText
            android:id="@+id/tvPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="8dp"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            tools:text="10,000"
            app:layout_constraintTop_toBottomOf="@id/tvLblPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvPriceSuffix" />

    <TextView
            android:id="@+id/tvErrPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalid_price"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tvPrice"
            app:layout_constraintStart_toStartOf="@id/tvPrice" />

    <TextView
            android:id="@+id/tvPriceSuffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/money_unit"
            app:layout_constraintTop_toTopOf="@id/tvPrice"
            app:layout_constraintBottom_toBottomOf="@id/tvPrice"
            app:layout_constraintStart_toEndOf="@id/tvPrice"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="52dp"
            android:layout_marginBottom="40dp"
            android:text="@string/register"
            android:background="@drawable/selector_text"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvPrice"
            app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>