<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signin.SignInActivity">

    <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/tvErrName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalid_name"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/etName"
            app:layout_constraintStart_toStartOf="@id/etName"/>

    <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/email"
            app:layout_constraintTop_toBottomOf="@id/etName"
            app:layout_constraintStart_toStartOf="parent" />

    <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="40dp"
            android:inputType="textEmailAddress"
            android:textAlignment="textEnd"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvDomain"/>

    <TextView
            android:id="@+id/tvDomain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="\@hp.com"
            app:layout_constraintTop_toTopOf="@id/etEmail"
            app:layout_constraintBottom_toBottomOf="@id/etEmail"
            app:layout_constraintStart_toEndOf="@id/etEmail"
            app:layout_constraintEnd_toEndOf="parent"/>
    
    <TextView
            android:id="@+id/tvErrEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalid_name"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintStart_toStartOf="@id/etEmail"/>

    <TextView
            android:id="@+id/tvLabPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/lab_part"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
            android:id="@+id/spnLab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvLabPart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spnPart" />

    <Spinner
            android:id="@+id/spnPart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintTop_toBottomOf="@id/tvLabPart"
            app:layout_constraintStart_toEndOf="@id/spnLab"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="52dp"
            android:text="@string/register"
            android:background="@drawable/selector_text"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/spnPart"/>

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>