<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.details.DetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/ivProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/photo_border"
                android:fitsSystemWindows="true"
                android:scaleType="center"
                android:src="@drawable/ic_unknown_72dp"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed" />

            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_gravity="bottom"
                android:background="@color/grey_truncate"
                android:padding="8dp"
                android:paddingStart="32dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvLblPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:text="@string/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="40dp"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLblPrice"
                tools:text="10,000" />

            <TextView
                android:id="@+id/tvSeller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:text="@string/seller"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPrice" />

            <TextView
                android:id="@+id/tvSellerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="40dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSeller"
                tools:text="Seller Name" />

            <TextView
                android:id="@+id/tvSellerLabPart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="40dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSellerName"
                tools:text="Lab1 | PID" />

            <TextView
                android:id="@+id/tvLblSalesLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:text="@string/sales_booth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSellerLabPart" />

            <TextView
                android:id="@+id/tvSalesLocation"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/sales_location"
                android:textColor="@color/white"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLblSalesLocation"
                tools:text="All" />

            <CheckBox
                android:id="@+id/chkFavorite"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_margin="40dp"
                android:button="@drawable/favorite_checkbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSalesLocation" />

            <TextView
                android:id="@+id/tvFavoriteNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="40dp"
                android:text="@string/number_of_users"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chkFavorite" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>